:iphone: Fixed buttons not showing on tablets and phones
Fixed todo buttons function not showing on tablets and phones

--- a/web/src/components/TodoItem/styles.module.scss
+++ b/web/src/components/TodoItem/styles.module.scss
@@ -73,3 +73,12 @@
     font-weight: 600;
   }
 }
+
+//
+
+@media (max-width: 1023px) {
+  .todoItem > span > button {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
