--- a/web/src/styles/home.module.scss
+++ b/web/src/styles/home.module.scss
@@ -195,7 +195,9 @@
       }
     }
   }
+}
 
+@media (max-width: 660px) {
   .mainContentContainer {
     flex-wrap: wrap;
   }
